2012-08-03  Paul Fitzpatrick  <paul@robotrebuilt.com>

	* conf/doxygen/Doxyfile.part.template (MAN_EXTENSION): move
	man pages to section 1 "Executable programs or shell commands"
	[thanks Daniele Domenichelli]

2012-08-03 Ugo Pattacini <ugo.pattacini@iit.it>
    * cart I/F: added set/getReferenceMode() methods

2012-08-02 Lorenzo Natale <lorenzo.natale@iit.it>
    * conf/template/YARPConfig.cmake.in
    * conf/YarpVersion.cmake

    Added YARP_SVN_REVISION number.

2012-07-31  Paul Fitzpatrick  <paul@robotrebuilt.com>

	* conf/YarpDoc.cmake: revive "make man" target for making man pages

	* src/libYARP_OS/src/ResourceFinder.cpp: undo breakage in 
	behavior when no policy is found [thanks Daniele Domenichelli]

	* src/yarpserver/CMakeLists.txt: add soversion to yarpserversql
	library and rename to YARP_serversql [thanks Daniele Domenichelli]

2012-07-30  Daniele E. Domenichelli <daniele.domenichelli@iit.it>
	* src/portscope/src/main.cpp: Switch to the new ResourceFinder
	  policy and use ResourceFinder to locate xml files.

2012-07-27  Paul Fitzpatrick  <paul@robotrebuilt.com>

	* src/libYARP_OS/src/ResourceFinder.cpp: give
	ResourceFinder::configure variant that doesn't require policy
	name to be specified.  When policy name is not specified, it
	can be provided externally with "--policy FOO_ROOT" flag, or
	"YARP_POLICY=FOO_ROOT" environment variable.

	* src/libYARP_OS/include/yarp/os/idl/WireTypes.h: stdint not
	available on older MSVC versions [thanks Ugo Pattacini]
	[thanks Ilaria Gori] [thanks Kyuhwa Lee]

2012-07-26  Daniele E. Domenichelli <daniele.domenichelli@iit.it>

	* extern/gtkdatabox/CMakeLists.txt,
	  extern/gtkdataboxmm/CMakeLists.txt,
	  extern/sqlite/CMakeLists.txt, extern/tinyxml/CMakeLists.txt:
	  Compile static libraries with position indipendent code
	  [thanks Lorenzo Natale]

2012-07-25  Daniele E. Domenichelli <daniele.domenichelli@iit.it>

	* conf/YarpFindDependencies.cmake: Move checks for dependencies
	  in this file.
